# PVIO

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: euroc.yaml  tum-vi.yaml
depends/: CMakeLists.txt
pvio/: CMakeLists.txt
pvio-extra/: CMakeLists.txt
pvio-extra/include/pvio/extra/: image_undistorter.h  opencv_image.h  poisson_disk_filter.h  yaml_config.h
pvio-extra/src/pvio/extra/: opencv_image.cpp  yaml_config.cpp
pvio-pc/: CMakeLists.txt
pvio-pc/config/: euroc.yaml  iphone6s.yaml  iphone7.yaml  iphonex.yaml  tum.yaml
pvio-pc/src/: dataset_reader.cpp  dataset_reader.h  euroc_dataset_reader.cpp  euroc_dataset_reader.h  legacy_sensors_dataset_reader.cpp  legacy_sensors_dataset_reader.h  main.cpp  output_writer.h  sensors_dataset_reader.cpp  sensors_dataset_reader.h  tum_dataset_reader.cpp  tum_dataset_reader.h
pvio/cmake/: version.h.in
pvio/depends/: CMakeLists.txt
pvio/include/pvio/: forensics.h  pvio.h
pvio/src/pvio/: common.h  config.cpp  forensics.cpp  pvio.cpp
pvio/src/pvio/core/: core.cpp  core.h  feature_tracker.cpp  feature_tracker.h  frontend_worker.cpp  frontend_worker.h  initializer.cpp  initializer.h  plane_extractor.cpp  plane_extractor.h  sliding_window_tracker.cpp  sliding_window_tracker.h
pvio/src/pvio/estimation/: bundle_adjustor.cpp  bundle_adjustor.h  factor.cpp  factor.h  pnp.cpp  pnp.h  preintegrator.cpp  preintegrator.h  state.h
pvio/src/pvio/estimation/ceres/: augmented_plane_distance_error_cost.h  cost_function_validator.h  depth_only_plane_distance_error_cost.h  marginalization_error_cost.h  pairwise_augmented_plane_distance_error_cost.h  plane_distance_error_cost.h  preintegration_error_cost.h  quaternion_parameterization.h  reprojection_error_cost.h  solver_options.h
pvio/src/pvio/geometry/: essential.cpp  essential.h  homography.cpp  homography.h  lie_algebra.cpp  lie_algebra.h  stereo.cpp  stereo.h
pvio/src/pvio/map/: frame.cpp  frame.h  map.cpp  map.h  plane.cpp  plane.h  track.cpp  track.h
pvio/src/pvio/utility/: debug.cpp  debug.h  identifiable.h  poisson_disk_filter.h  random.h  ransac.h  sector_area.h  unique_timer.h  wahba_problem.h  worker.cpp  worker.h
